<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/users_title"
        android:textColor="@color/primaryTextColor"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible" />

    <RelativeLayout
        android:id="@+id/rl_search_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        tools:visibility="visible">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_box"
            android:drawableStart="@drawable/ic_search_24dp"
            android:drawablePadding="5dp"
            android:focusedByDefault="false"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp" />

        <ImageView
            android:id="@+id/clear_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8sp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_close_24dp"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/no_user_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:alpha="0.6"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/no_groups" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_user_available"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <com.cometchat.pro.uikit.CometChatUserList
        android:id="@+id/rv_user_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_search_box"
        app:headers="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/user_list_row" />

    <include layout="@layout/user_list_placeholder" />


</RelativeLayout>