<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <com.cometchat.pro.uikit.Avatar
            android:id="@+id/iv_user"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            app:border_color="@color/colorPrimary"
            app:border_width="0.5dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/iv_user"
            android:textSize="@dimen/fourteen"
            tools:text="Iron Man" />

        <RelativeLayout
            android:id="@+id/cv_message_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_user"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="1dp"
            android:layout_toEndOf="@id/iv_user"
            android:background="@drawable/cc_message_bubble_left">

            <include
                layout="@layout/left_reply_message_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/go_txt_message"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp" />

            <RelativeLayout
                android:id="@+id/sentiment_layout"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@color/red_600"
                android:padding="16dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/sentiment_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/view_sentiment"
                    android:text="@string/sentimment_content"
                    android:textColor="@color/textColorWhite"
                    android:textSize="12dp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/view_sentiment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:text="@string/view"
                    android:textColor="@color/textColorWhite"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/go_txt_message"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:autoLink="web|all"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:linksClickable="true"
                android:maxWidth="250dp"
                android:padding="10dp"
                android:textColor="@color/primaryTextColor"
                android:textColorLink="@color/dark_blue"
                tools:text="message" />
        </RelativeLayout>


        <ImageView
            android:id="@+id/img_pending"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-5dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/cv_message_container"
            android:contentDescription="@string/user_avatar"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_user"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/tv_user"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="11:00 PM" />
    </RelativeLayout>

</LinearLayout>
